[gd_scene format=3 uid="uid://qtuvolwb21d4"]

[ext_resource type="Script" uid="uid://xly4dr8emeds" path="res://scripts/player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://btpmigtjuf4tn" path="res://assets/placeholder/Tiles/tile_0097.png" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cbrubbtk5ih2w" path="res://assets/placeholder/Tiles/tile_0096.png" id="2_i3pqv"]
[ext_resource type="AudioStream" uid="uid://b1nkmw0gyw7h4" path="res://assets/Audio/Music/FGJ26Base.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://clnefh4kgkpti" path="res://assets/Audio/Music/FGJ26Aggro.wav" id="5_tuyoq"]
[ext_resource type="AudioStream" uid="uid://cvakgviks1mxs" path="res://assets/Audio/Music/FGJ26Calm.wav" id="6_fjrip"]
[ext_resource type="Script" uid="uid://dkpntrl6h46hg" path="res://scripts/audio_handler.gd" id="7_fjrip"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hqtel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_onrkg")
}, {
"duration": 1.0,
"texture": ExtResource("2_i3pqv")
}],
"loop": true,
"name": &"Mask",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sweqy"]
radius = 6.0827627

[node name="Player" type="CharacterBody2D" unique_id=347930696]
script = ExtResource("1_i3pqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=332943137]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_hqtel")
animation = &"Mask"
autoplay = "Mask"
frame_progress = 0.783805

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=831777840]
shape = SubResource("CircleShape2D_sweqy")

[node name="BaseMusic" type="AudioStreamPlayer" parent="." unique_id=2145571517]
stream = ExtResource("4_dqkch")
bus = &"Music"

[node name="AggroMusic" type="AudioStreamPlayer" parent="." unique_id=412283087]
stream = ExtResource("5_tuyoq")
volume_db = -80.0
bus = &"Music"

[node name="CalmMusic" type="AudioStreamPlayer" parent="." unique_id=319915158]
stream = ExtResource("6_fjrip")
volume_db = -80.0
bus = &"Music - faded"

[node name="AudioHandler" type="Node2D" parent="." unique_id=1790787452]
script = ExtResource("7_fjrip")

[node name="BaseMusic" type="AudioStreamPlayer2D" parent="AudioHandler" unique_id=2015576471]
stream = ExtResource("4_dqkch")
bus = &"Music"

[node name="CalmMusic" type="AudioStreamPlayer2D" parent="AudioHandler" unique_id=462590508]
stream = ExtResource("6_fjrip")
volume_db = -80.0
bus = &"Music - faded"

[node name="AggroMusic" type="AudioStreamPlayer2D" parent="AudioHandler" unique_id=942592656]
stream = ExtResource("5_tuyoq")
volume_db = -80.0
bus = &"Music"
